# SolARModuleNonFreeOpenCV

./: .project  CMakeLists.txt  JenkinsFile  README.md  SolARModuleNonFreeOpenCV.pri  SolARModuleNonFreeOpenCV.pro  bcom-SolARModuleNonFreeOpenCV.pc.in  bcom-SolARModuleOpenCV.pc.in  doxyfile  packagedependencies-cmake.txt  packagedependencies.txt  xpcf_SolARModuleNonFreeOpenCV_registry.xml  xpcf_SolARModuleNonFreeOpenCV_registry_debug.xml  xpcf_SolARModuleNonFreeOpenCV_registry_release.xml
interfaces/: SolARDescriptorsExtractorSIFTOpencv.h  SolARDescriptorsExtractorSURF128Opencv.h  SolARDescriptorsExtractorSURF64Opencv.h  SolARKeypointDetectorNonFreeOpencv.h  SolARModuleManagerNonFreeOpencv.h  SolARModuleManagerOpencvNonFree.h  SolARModuleNonFreeOpencv_traits.h  SolAROpencvNonFreeAPI.h
src/: SolARDescriptorsExtractorSIFTOpencv.cpp  SolARDescriptorsExtractorSURF128Opencv.cpp  SolARDescriptorsExtractorSURF64Opencv.cpp  SolARKeypointDetectorNonFreeOpencv.cpp  SolARModuleManagerNonFreeOpencv.cpp  SolARModuleManagerOpencvNonFree.cpp  SolARModuleNonFreeOpencv.cpp  SolARModuleOpencv.cpp
tests/SolARDescriptorExtractor/: CMakeLists.txt  SolARDescriptorExtractorOpenCVNonFreeTest.pro  SolAROpenCVNonFreeDescriptorExtractor_conf.xml  conf_DescriptorExtractor.xml  main.cpp  packagedependencies-cmake.txt  packagedependencies.txt
tests/SolARDescriptorExtractor/build-SolARDescriptorExtractorOpenCVDynTest-Desktop-Release/: Makefile  SolARDescriptorExtractorOpenCVStaticTest
tests/SolARDescriptorExtractor/build-SolARDescriptorExtractorOpenCVDynTest-Desktop_Qt_5_10_0_MSVC2017_64bit-Debug/: Makefile
tests/SolARDescriptorExtractor/build-SolARDescriptorExtractorOpenCVStaticTest-Desktop-Release/: Makefile  SolARDescriptorExtractorOpenCVStaticTest
tests/SolARFundamentalMatrixEstimation/: CMakeLists.txt  main.cpp
tests/SolARMatchesFilter/: main.cpp  packagedependencies.txt
tests/TestDynamicLoading/: CMakeLists.txt  README.adoc  TestDynamicLoading.pro  config.ini  main.cpp  packagedependencies.txt
tests/build-TestDynamicLoading-Desktop-Release/: Makefile  TestDynamicLoading
(+20 files in other folders)
